refactor: modernize
 - Java 11, single-line declarations
 - reorder method order
   order I used:
   ordered logically:
   setupZones
   setupRequirements
   setupSteps
   loadSteps
   ordered based on order in the sidebar:
   getItemRequirements
   getItemRecommended
   getEnemiesToDefeat
   getQuestPointReward
   getExperienceRewards
   getItemRewards
   getUnlockRewards
   getPanels
 - use LogicHelper instead of raw Conditions